# elmerfem

./: .cproject  CMakeCache.txt  CMakeLists.txt
cmake/Modules/: FindFETI4I.cmake  FindPermon.cmake
fem/examples/SEOP/: ELMERSOLVER_STARTINFO  case.sif  casebk.sif  casebk2.sif
fem/examples/SEOP/square/: case.sif  mesh.elements
fem/examples/SEOPCell/: case.sif
fem/src/: CMakeLists.txt  CRSMatrix.F90  DefUtils.F90  DirectSolve.F90  ElmerSolver.F90  IterSolve.F90  MainUtils.F90  SOLVER.KEYWORDS  SolverUtils.F90  Types.F90
fem/src/modules/: Beta_Calc.F90  C-ECalc.F90  CMakeLists.txt  CoilSolver.F90  MagnetoDynamics.F90  OPSolver.F90  OPUtil.F90  SEOPLaser.F90  SEOPSolver.F90  SEOPtherm.F90  SEOPvis.F90  SESolver.F90  XePol.F90  a.out
fem/src/modules/MagnetoDynamics/: AVSolver.F90  CalcFields.F90  HarmonicAVSolver.F90  Utils.F90
fem/tests/OP_2D/: case.sif
fem/tests/OP_2D_Beta/: case.sif
fem/tests/SEOP_2D/: case.sif
fem/tests/SEOP_2D/square/: mesh.boundary  mesh.header  mesh.nodes
fem/tests/SE_2D/: case-beta.sif  case.sif
fem/tests/SE_2D/Cell/: mesh.boundary
fem/tests/SE_2D_Adpt/: Cell.unv  case-Cell.sif  case.sif  fort.12
fem/tests/SE_2D_Adpt/Cell/: mesh.elements  mesh.names  mesh.nodes
fem/tests/SE_3D_T1/: ELMERSOLVER_STARTINFO  case-model.sif  case-t1.sif  case.sif  sphere.unv
fem/tests/SE_3D_T1/sphere/: mesh.boundary  mesh.elements  mesh.header  mesh.nodes
fem/tests/SE_3D_T1/sphere/partitioning.4/: part.1.boundary  part.1.elements  part.1.header  part.1.nodes  part.1.shared  part.2.boundary  part.2.elements  part.2.header  part.2.nodes  part.2.shared  part.3.boundary  part.3.elements  part.3.header  part.3.nodes  part.3.shared  part.4.boundary  part.4.elements  part.4.header  part.4.nodes  part.4.shared
fem/tests/WinkelNavierPartitionUniform/: CMakeLists.txt  case.sif
fem/tests/mgdyn_torus_harmonic/: case.sif
feti4i/feti4i_fortran_test/: Makefile
misc/SEOPSifs/: XePol.sif  XePolIncomp.sif  XePolPerGas.sif  XePolSif.sif
misc/SEOPSifs/exmesh/: entities.sif  mesh.boundary  mesh.header  mesh.names  netgen.prof
