
INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}/fem/src")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/hutiter/include")


MACRO(ADD_ELMER_MODULE BASENAME)
  CMAKE_PARSE_ARGUMENTS(_parsedArgs "" "" "SOURCES;DIRECTORY" "${ARGN}")

  SET(_SOURCES "")

  IF(_parsedArgs_DIRECTORY)
    FILE(GLOB DIR_SRC_FILES "${_parsedArgs_DIRECTORY}/*.F90")
    SET(_SOURCES ${DIR_SRC_FILES})
  ELSEIF(_parsedArgs_SOURCES)
    SET(SOURCES ${_parsedArgs_SOURCES})
  ELSE()
    SET(SOURCES ${BASENAME}.F90)
  ENDIF()

  ADD_LIBRARY(${BASENAME} SHARED ${SOURCES})

  SET_TARGET_PROPERTIES(${BASENAME} PROPERTIES PREFIX "")
  SET_TARGET_PROPERTIES(${BASENAME} PROPERTIES LINKER_LANGUAGE Fortran)
  TARGET_LINK_LIBRARIES(${BASENAME} elmersolver)
  ADD_DEPENDENCIES(${BASENAME} elmersolver)
  INSTALL(TARGETS ${BASENAME} 
    LIBRARY DESTINATION "share/elmersolver/lib"
    RUNTIME DESTINATION "share/elmersolver/lib"
    ARCHIVE DESTINATION "share/elmersolver/lib")
ENDMACRO()

FILE(GLOB SRC_FILES *.F90)

FOREACH(FNAME ${SRC_FILES})
  GET_FILENAME_COMPONENT(BASENAME ${FNAME} NAME_WE)
  
  ADD_ELMER_MODULE(${BASENAME})

  #IF(NOT(${BASENAME} MATCHES "^MagnetoDynamicsObj"))
    #SET_TARGET_PROPERTIES(${BASENAME} PROPERTIES PREFIX "")
    #SET_TARGET_PROPERTIES(${BASENAME} PROPERTIES LINKER_LANGUAGE Fortran)
    #TARGET_LINK_LIBRARIES(${BASENAME} elmersolver)
    #ADD_DEPENDENCIES(${BASENAME} elmersolver)

    ##IF(${BASENAME} STREQUAL "EliminateDirichlet")
      ##IF(NOT(WIN32))
        ##INSTALL(TARGETS ${BASENAME} 
          ##ARCHIVE DESTINATION "share/elmersolver/lib"
          ##LIBRARY DESTINATION "share/elmersolver/lib")
      ##ELSE()
        ##INSTALL(TARGETS ${BASENAME}
          ##RUNTIME DESTINATION "share/elmersolver/lib"
          ##LIBRARY DESTINATION "share/elmersolver/lib")
      ##ENDIF()
    ##ELSE()
      #INSTALL(TARGETS ${BASENAME} 
        #LIBRARY DESTINATION "share/elmersolver/lib"
        #RUNTIME DESTINATION "share/elmersolver/lib"
        #ARCHIVE DESTINATION "share/elmersolver/lib")
    ##ENDIF()
  #ENDIF()
ENDFOREACH()

ADD_ELMER_MODULE(MagnetoDynamics DIRECTORY MagnetoDynamics) 

ADD_DEPENDENCIES(EliminatePeriodic EliminateDirichlet)
ADD_DEPENDENCIES(FourierLoss MagnetoDynamics)
TARGET_LINK_LIBRARIES(EliminatePeriodic EliminateDirichlet)
